# lesson_47_SQL

./: app.py  eshop.db  eshop.sql  pyproject.toml  test.http
models/: product.py
